--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,9 @@ version: 2.1
 orbs: 
   cypress: cypress-io/cypress@1.29.0
 
-
+executors:
+  node14: 
+    - image: 'cypress/base:14.17.0'
 
 
 
@@ -12,3 +14,4 @@ workflows:
     jobs:
       - cypress/run:    
           yarn: true
+          executor: node14
