--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,3 +17,4 @@ workflows:
           yarn: true
           executor: node14
           start: yarn dev
+          wait-on: 'http://localhost:3000'
